Shell script to kickstart gunicorn server

--- a/files/demoapp.conf
+++ b/files/demoapp.conf
@@ -1,7 +1,7 @@
 [program:demoapp]
-command = /home/vagrant/demo-app/venv/bin/gunicorn --bind 127.0.0.1:8000 manage:app -w 4
+command = /home/vagrant/demo-app/venv/bin/gunicorn_start
 directory = /home/vagrant/demo-app
 user = vagrant
-autostart=true
-autorestart=true
+autostart = true
+autorestart = true
 redirect_stderr = True
