--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,13 @@
 ---
 - name: Deploy demo-app
   hosts: development
+  vars:
+    home_dir: "{{ ansible_env.HOME }}"
+    project_name: demo-app
+    venv_name: venv
+    project_path: "{{ home_dir }}/{{ project_name }}"
+    venv_path: "{{ home_dir }}/{{ project_name }}/{{ venv_name }}"
+    repo_url: https://github.com/AlexPG/flask-demo-app.git
   tasks:
 
     - name: Update apt cache
@@ -28,23 +35,23 @@
 
     - name: Get project repo
       git:
-        repo: https://github.com/AlexPG/flask-demo-app.git
-        dest: "{{ ansible_env.HOME }}/demo-app"
+        repo: "{{ repo_url }}"
+        dest: "{{ project_path }}"
         force: yes
 
     - name: Install required python packages
       pip:
         name: "{{ item }}"
-        virtualenv: "{{ ansible_env.HOME }}/demo-app/venv"
+        virtualenv: "{{ venv_path }}"
         virtualenv_python: python2.7
       with_items:
         - gunicorn
 
     - name: Install requirements.txt
-      pip: 
-        requirements: "{{ ansible_env.HOME }}/demo-app/requirements.txt"
-        virtualenv: "{{ ansible_env.HOME }}/demo-app/venv"
-    
+      pip:
+        requirements: "{{ project_path }}/requirements.txt"
+        virtualenv: "{{ venv_path }}"
+
     - name: Create postgresql user
       postgresql_user:
         name: vagrant
@@ -68,24 +75,24 @@
       become_user: postgres
 
     - name: Create demo-app tables
-      command: "{{ ansible_env.HOME }}/demo-app/venv/bin/python ./demo-app/manage.py createdb"
+      command: "{{ venv_path }}/bin/python ./demo-app/manage.py createdb"
 
     - name: Set the gunicorn config file
-      copy: 
-        src: files/gunicorn_start
-        dest: "{{ ansible_env.HOME }}/demo-app/venv/bin/gunicorn_start"
+      template: 
+        src: templates/gunicorn_start.j2
+        dest: "{{ venv_path }}/bin/gunicorn_start"
         mode: 0764
 
     - name: Set the supervisor config file
-      copy:
-        src: files/demoapp.conf
+      template:
+        src: templates/demoapp.conf.j2
         dest: /etc/supervisor/conf.d/demoapp.conf
       become: true
       notify: restart supervisor
 
     - name: Set the nginx config file
-      copy: 
-        src: files/demoapp
+      template: 
+        src: templates/demoapp.j2
         dest: /etc/nginx/sites-available/demoapp
       become: true
       notify: restart nginx
